teams/team-riker/dev/templates/alb-skiapp/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: skiapp-service
  namespace: team-riker
spec: 
  ports: 
    - 
      port: 80
      protocol: TCP
      targetPort: 8080
  selector: 
    app: skiapp
  type: NodePort
