teams/team-riker/dev/templates/alb-skiapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  annotations: 
    alb.ingress.kubernetes.io/group.name: riker
    alb.ingress.kubernetes.io/listen-ports: "[{\"HTTP\": 80}]"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: "Environment=dev,Team=Riker"
    alb.ingress.kubernetes.io/target-type: ip
  name: skiapp-ingress
  namespace: team-riker
spec: 
  ingressClassName: alb
  rules: 
    - 
      host: ~
      http: 
        paths: 
          - 
            backend: 
              service: 
                name: skiapp-service
                port: 
                  number: 80
            path: /
            pathType: Prefix
